Added async/await assignment.
And upgraded ASP.NET MVC app + SqlCompactEdition.

--- a/PersonWeb/Web.config
+++ b/PersonWeb/Web.config
@@ -49,12 +49,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="System.Data.SqlServerCe.4.0" />
-      <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-    </DbProviderFactories>
-  </system.data>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
       <parameters>
@@ -65,4 +60,4 @@
   <connectionStrings>
     <add name="PersonWeb.Model.PersonContext" connectionString="Data Source=|DataDirectory|PersonWeb.sdf" providerName="System.Data.SqlServerCe.4.0" />
   </connectionStrings>
-</configuration>
+<system.data><DbProviderFactories><remove invariant="System.Data.SqlServerCe.4.0" /><add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" /></DbProviderFactories></system.data></configuration>
